fix skip current song alignment

--- a/revamp/js/latinxnostalgia/src/components/Aside.css
+++ b/revamp/js/latinxnostalgia/src/components/Aside.css
@@ -58,8 +58,12 @@ aside h2 {
     border-bottom: 8px solid rgba(255, 255, 255, 0.1);
     border-top: 8px solid rgba(255,255,255,0.1);
 }
-.g-bar h3, .g-bar p {
+.g-bar h3, .g-bar div {
     width: 50%;
+}
+.g-bar .button {
+    margin-right: 10px;
+    text-align: center;
 }
 .button {
     display: inline-block;
